tests/invalid/invalid_integral_call_inst.err_exp
invalid_integral_call_inst.m:036: In clause for `main_i08(di, uo)':
invalid_integral_call_inst.m:036:   in argument 1 of call to function
invalid_integral_call_inst.m:036:   `invalid_integral_call_inst.test_int08'/1:
invalid_integral_call_inst.m:036:   mode error: variable [38;5;87m`NI08'[39;49m has
invalid_integral_call_inst.m:036:   instantiatedness [38;5;203m`unique(7i8)',[39;49m
invalid_integral_call_inst.m:036:   expected instantiatedness was
invalid_integral_call_inst.m:036:   [38;5;40m`bound(2i8 ; 4i8 ; 6i8)'.[39;49m
invalid_integral_call_inst.m:043: In clause for `main_i16(di, uo)':
invalid_integral_call_inst.m:043:   in argument 1 of call to function
invalid_integral_call_inst.m:043:   `invalid_integral_call_inst.test_int16'/1:
invalid_integral_call_inst.m:043:   mode error: variable [38;5;87m`NI16'[39;49m has
invalid_integral_call_inst.m:043:   instantiatedness [38;5;203m`unique(7i16)',[39;49m
invalid_integral_call_inst.m:043:   expected instantiatedness was
invalid_integral_call_inst.m:043:   [38;5;40m`bound(2i16 ; 4i16 ; 6i16)'.[39;49m
invalid_integral_call_inst.m:050: In clause for `main_i32(di, uo)':
invalid_integral_call_inst.m:050:   in argument 1 of call to function
invalid_integral_call_inst.m:050:   `invalid_integral_call_inst.test_int32'/1:
invalid_integral_call_inst.m:050:   mode error: variable [38;5;87m`NI32'[39;49m has
invalid_integral_call_inst.m:050:   instantiatedness [38;5;203m`unique(7i32)',[39;49m
invalid_integral_call_inst.m:050:   expected instantiatedness was
invalid_integral_call_inst.m:050:   [38;5;40m`bound(2i32 ; 4i32 ; 6i32)'.[39;49m
invalid_integral_call_inst.m:057: In clause for `main_i64(di, uo)':
invalid_integral_call_inst.m:057:   in argument 1 of call to function
invalid_integral_call_inst.m:057:   `invalid_integral_call_inst.test_int64'/1:
invalid_integral_call_inst.m:057:   mode error: variable [38;5;87m`NI64'[39;49m has
invalid_integral_call_inst.m:057:   instantiatedness [38;5;203m`unique(7i64)',[39;49m
invalid_integral_call_inst.m:057:   expected instantiatedness was
invalid_integral_call_inst.m:057:   [38;5;40m`bound(2i64 ; 4i64 ; 6i64)'.[39;49m
invalid_integral_call_inst.m:064: In clause for `main_i(di, uo)':
invalid_integral_call_inst.m:064:   in argument 1 of call to function
invalid_integral_call_inst.m:064:   `invalid_integral_call_inst.test_int'/1:
invalid_integral_call_inst.m:064:   mode error: variable [38;5;87m`NI'[39;49m has
invalid_integral_call_inst.m:064:   instantiatedness [38;5;203m`unique(7)',[39;49m
invalid_integral_call_inst.m:064:   expected instantiatedness was
invalid_integral_call_inst.m:064:   [38;5;40m`bound(2 ; 4 ; 6)'.[39;49m
invalid_integral_call_inst.m:071: In clause for `main_u08(di, uo)':
invalid_integral_call_inst.m:071:   in argument 1 of call to function
invalid_integral_call_inst.m:071:   `invalid_integral_call_inst.test_uint08'/1:
invalid_integral_call_inst.m:071:   mode error: variable [38;5;87m`NU08'[39;49m has
invalid_integral_call_inst.m:071:   instantiatedness [38;5;203m`unique(7u8)',[39;49m
invalid_integral_call_inst.m:071:   expected instantiatedness was
invalid_integral_call_inst.m:071:   [38;5;40m`bound(2u8 ; 4u8 ; 6u8)'.[39;49m
invalid_integral_call_inst.m:078: In clause for `main_u16(di, uo)':
invalid_integral_call_inst.m:078:   in argument 1 of call to function
invalid_integral_call_inst.m:078:   `invalid_integral_call_inst.test_uint16'/1:
invalid_integral_call_inst.m:078:   mode error: variable [38;5;87m`NU16'[39;49m has
invalid_integral_call_inst.m:078:   instantiatedness [38;5;203m`unique(7u16)',[39;49m
invalid_integral_call_inst.m:078:   expected instantiatedness was
invalid_integral_call_inst.m:078:   [38;5;40m`bound(2u16 ; 4u16 ; 6u16)'.[39;49m
invalid_integral_call_inst.m:085: In clause for `main_u32(di, uo)':
invalid_integral_call_inst.m:085:   in argument 1 of call to function
invalid_integral_call_inst.m:085:   `invalid_integral_call_inst.test_uint32'/1:
invalid_integral_call_inst.m:085:   mode error: variable [38;5;87m`NU32'[39;49m has
invalid_integral_call_inst.m:085:   instantiatedness [38;5;203m`unique(7u32)',[39;49m
invalid_integral_call_inst.m:085:   expected instantiatedness was
invalid_integral_call_inst.m:085:   [38;5;40m`bound(2u32 ; 4u32 ; 6u32)'.[39;49m
invalid_integral_call_inst.m:092: In clause for `main_u64(di, uo)':
invalid_integral_call_inst.m:092:   in argument 1 of call to function
invalid_integral_call_inst.m:092:   `invalid_integral_call_inst.test_uint64'/1:
invalid_integral_call_inst.m:092:   mode error: variable [38;5;87m`NU64'[39;49m has
invalid_integral_call_inst.m:092:   instantiatedness [38;5;203m`unique(7u64)',[39;49m
invalid_integral_call_inst.m:092:   expected instantiatedness was
invalid_integral_call_inst.m:092:   [38;5;40m`bound(2u64 ; 4u64 ; 6u64)'.[39;49m
invalid_integral_call_inst.m:099: In clause for `main_u(di, uo)':
invalid_integral_call_inst.m:099:   in argument 1 of call to function
invalid_integral_call_inst.m:099:   `invalid_integral_call_inst.test_uint'/1:
invalid_integral_call_inst.m:099:   mode error: variable [38;5;87m`NU'[39;49m has
invalid_integral_call_inst.m:099:   instantiatedness [38;5;203m`unique(7u)',[39;49m
invalid_integral_call_inst.m:099:   expected instantiatedness was
invalid_integral_call_inst.m:099:   [38;5;40m`bound(2u ; 4u ; 6u)'.[39;49m
For more information, recompile with `-E'.
